--- a/show_room/requirements.txt
+++ b/show_room/requirements.txt
@@ -8,10 +8,12 @@ django-crispy-forms==1.14.0
 django-heroku==0.3.1
 django-registration==3.3
 django-tinymce==3.4.0
+djangorestframework==3.13.1
 gunicorn==20.1.0
 Pillow==9.1.1
 psycopg2==2.9.3
 python-decouple==3.6
+pytz==2022.1
 soupsieve==2.3.2.post1
 sqlparse==0.4.2
 whitenoise==6.1.0
